--- a/surge/lhie1.conf
+++ b/surge/lhie1.conf
@@ -29,8 +29,7 @@ Proxy = select, 🇺🇸gia8, google, 🇩🇪gia
 油管 = select, Proxy, google, 🇸🇬IPLC
 tw = select, Proxy, 🇨🇳CHT11
 game = select, DIRECT, Proxy
-AD = select, REJECT
-apple = select, DIRECT, Proxy
+Apple = select, DIRECT, Proxy
 
 [Rule]
 # Feeb
@@ -101,7 +100,7 @@ DOMAIN,ipm.atm.youku.com,REJECT
 DOMAIN,iyes.youku.com,REJECT
 DOMAIN-SUFFIX,criteo.com,REJECT
 
-DOMAIN-SUFFIX,mobileapptracking.com,reject
+DOMAIN-SUFFIX,mobileapptracking.com,REJECT
 
 //江阴bus
 DOMAIN,stats.jpush.cn,REJECT
@@ -147,39 +146,39 @@ USER-AGENT,wpsoffice*,REJECT
 
 # Proxy
 
-DOMAIN-SUFFIX,inoreader.com,PROXY
-DOMAIN-SUFFIX,muncloud.me,PROXY
-DOMAIN-SUFFIX,nexitcore.com,PROXY
-DOMAIN,graph.microsoft.com,PROXY
-DOMAIN,oneclient.sfx.ms,PROXY
-DOMAIN-SUFFIX,scribd.com,PROXY 
-DOMAIN-SUFFIX,scupio.com,PROXY
-DOMAIN-SUFFIX,creativecdn.com,PROXY
-DOMAIN-SUFFIX,aralego.com,PROXY
-DOMAIN-SUFFIX,animeone.me,PROXY
-DOMAIN-SUFFIX,anime1.me,PROXY
-DOMAIN-SUFFIX,pscdn.co,PROXY
-DOMAIN-SUFFIX,ampproject.net,PROXY
-DOMAIN-SUFFIX,ampproject.org,PROXY
-DOMAIN-SUFFIX,app-measurement.com,PROXY
-DOMAIN-SUFFIX,msauth.net,PROXY
-DOMAIN-SUFFIX,hotmail.com,PROXY
+DOMAIN-SUFFIX,inoreader.com,Proxy
+DOMAIN-SUFFIX,muncloud.me,Proxy
+DOMAIN-SUFFIX,nexitcore.com,Proxy
+DOMAIN,graph.microsoft.com,Proxy
+DOMAIN,oneclient.sfx.ms,Proxy
+DOMAIN-SUFFIX,scribd.com,Proxy
+DOMAIN-SUFFIX,scupio.com,Proxy
+DOMAIN-SUFFIX,creativecdn.com,Proxy
+DOMAIN-SUFFIX,aralego.com,Proxy
+DOMAIN-SUFFIX,animeone.me,Proxy
+DOMAIN-SUFFIX,anime1.me,Proxy
+DOMAIN-SUFFIX,pscdn.co,Proxy
+DOMAIN-SUFFIX,ampproject.net,Proxy
+DOMAIN-SUFFIX,ampproject.org,Proxy
+DOMAIN-SUFFIX,app-measurement.com,Proxy
+DOMAIN-SUFFIX,msauth.net,Proxy
+DOMAIN-SUFFIX,hotmail.com,Proxy
 DOMAIN-SUFFIX,pixiv.cat,proxy
 
 DOMAIN-SUFFIX,cloudflare.com,Proxy
 DOMAIN-SUFFIX,qualtrics.com,Proxy
 DOMAIN-SUFFIX,evernote.com,Proxy
 
-DOMAIN-SUFFIX,graph.facebook.com,reject
-DOMAIN-SUFFIX,nuomi.com,reject
-DOMAIN-SUFFIX,opnstat.baidu.com,reject
-DOMAIN-SUFFIX,zt.baidu.com,reject
+DOMAIN-SUFFIX,graph.facebook.com,REJECT
+DOMAIN-SUFFIX,nuomi.com,REJECT
+DOMAIN-SUFFIX,opnstat.baidu.com,REJECT
+DOMAIN-SUFFIX,zt.baidu.com,REJECT
 
-DOMAIN-SUFFIX,services.mozilla.com,direct
+DOMAIN-SUFFIX,services.mozilla.com,DIRECT
 IP-CIDR,239.255.255.250/32,DIRECT,no-resolve
 IP-CIDR,224.0.0.251/32,DIRECT,no-resolve
-DOMAIN,login.microsoftonline.com,direct
-DOMAIN-SUFFIX,v2ex.com,direct
+DOMAIN,login.microsoftonline.com,DIRECT
+DOMAIN-SUFFIX,v2ex.com,DIRECT
 
 //Siri
 #USER-AGENT,*AssistantServices*,DIRECT
@@ -206,7 +205,7 @@ DOMAIN-SUFFIX,hinet.net,tw
 
 # AD
 
-RULE-SET,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/Advertising.list,Advertising
+RULE-SET,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/Advertising.list,REJECT
 
 # game
 #RULE-SET,https://raw.githubusercontent.com/olocn/rule/master/surge/game.list,game
