--- a/surge/lhie1.conf
+++ b/surge/lhie1.conf
@@ -100,7 +100,7 @@ DOMAIN,ipm.atm.youku.com,REJECT
 DOMAIN,iyes.youku.com,REJECT
 DOMAIN-SUFFIX,criteo.com,REJECT
 
-DOMAIN-SUFFIX,mobileapptracking.com,REJECT
+DOMAIN-SUFFIX,mobileapptracking.com,reject
 
 //江阴bus
 DOMAIN,stats.jpush.cn,REJECT
@@ -151,7 +151,7 @@ DOMAIN-SUFFIX,muncloud.me,Proxy
 DOMAIN-SUFFIX,nexitcore.com,Proxy
 DOMAIN,graph.microsoft.com,Proxy
 DOMAIN,oneclient.sfx.ms,Proxy
-DOMAIN-SUFFIX,scribd.com,Proxy
+DOMAIN-SUFFIX,scribd.com,Proxy 
 DOMAIN-SUFFIX,scupio.com,Proxy
 DOMAIN-SUFFIX,creativecdn.com,Proxy
 DOMAIN-SUFFIX,aralego.com,Proxy
@@ -163,13 +163,23 @@ DOMAIN-SUFFIX,ampproject.org,Proxy
 DOMAIN-SUFFIX,app-measurement.com,Proxy
 DOMAIN-SUFFIX,msauth.net,Proxy
 DOMAIN-SUFFIX,hotmail.com,Proxy
-DOMAIN-SUFFIX,pixiv.cat,proxy
+DOMAIN-SUFFIX,pixiv.cat,Proxy
 
+DOMAIN-SUFFIX,pximg.net,Proxy
+DOMAIN-SUFFIX,zaobao.com.sg,Proxy
+DOMAIN-SUFFIX,playno1.com,Proxy
+DOMAIN-SUFFIX,sehuatang.net,Proxy
 DOMAIN-SUFFIX,cloudflare.com,Proxy
 DOMAIN-SUFFIX,qualtrics.com,Proxy
 DOMAIN-SUFFIX,evernote.com,Proxy
 
-DOMAIN-SUFFIX,graph.facebook.com,REJECT
+DOMAIN,login.live.com,Proxy
+
+DOMAIN-SUFFIX,vfast.cc,Proxy
+
+DOMAIN-SUFFIX,nationalgeographic.com,Proxy
+DOMAIN-SUFFIX,liuli.uk,Proxy
+DOMAIN-SUFFIX,graph.facebook.com,DIRECT
 DOMAIN-SUFFIX,nuomi.com,REJECT
 DOMAIN-SUFFIX,opnstat.baidu.com,REJECT
 DOMAIN-SUFFIX,zt.baidu.com,REJECT
@@ -179,6 +189,8 @@ IP-CIDR,239.255.255.250/32,DIRECT,no-resolve
 IP-CIDR,224.0.0.251/32,DIRECT,no-resolve
 DOMAIN,login.microsoftonline.com,DIRECT
 DOMAIN-SUFFIX,v2ex.com,DIRECT
+DOMAIN-SUFFIX,letsencrypt.org,DIRECT
+
 
 //Siri
 #USER-AGENT,*AssistantServices*,DIRECT
