--- a/surge/lhie1.conf
+++ b/surge/lhie1.conf
@@ -5,7 +5,7 @@ ipv6 = false
 force-http-engine-hosts = 123.59.31.1,119.18.193.135,122.14.246.33
 enhanced-mode-by-rule = 1
 show-error-page-for-reject = true
-dns-server = 119.29.29.29, 117.50.10.10
+dns-server = 119.29.29.29, 114.114.114.114
 allow-wifi-access = false
 network-framework = false
 
@@ -100,7 +100,7 @@ DOMAIN,ipm.atm.youku.com,REJECT
 DOMAIN,iyes.youku.com,REJECT
 DOMAIN-SUFFIX,criteo.com,REJECT
 
-DOMAIN-SUFFIX,mobileapptracking.com,reject
+DOMAIN-SUFFIX,mobileapptracking.com,REJECT
 
 //江阴bus
 DOMAIN,stats.jpush.cn,REJECT
@@ -198,8 +198,6 @@ DOMAIN-SUFFIX,letsencrypt.org,DIRECT
 #USER-AGENT,Siri*,DIRECT
 #USER-AGENT,*siri*,DIRECT
 
-RULE-SET,https://raw.githubusercontent.com/olocn/rule/master/surge/apple.list,apple
-
 # Proxy
 # > Youtube
 USER-AGENT,com.google.ios.youtube*,油管
@@ -227,7 +225,7 @@ RULE-SET,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Rule
 # RULE-SET,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/Telegram.list,Telegram
 
 # Global 全球加速
-RULE-SET,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/Global.list,PROXY
+RULE-SET,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/Global.list,Proxy
 
 # Apple 服务
 RULE-SET,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/Apple.list,Apple
