--- a/surge/lhie1.conf
+++ b/surge/lhie1.conf
@@ -84,6 +84,8 @@ DOMAIN-SUFFIX,zhengjian.org,REJECT
 DOMAIN-SUFFIX,zhuichaguoji.org,REJECT
 DOMAIN-SUFFIX,docer.com,REJECT
 
+
+DOMAIN-SUFFIX,appadhoc.com,REJECT
 DOMAIN,log.mmstat.com,REJECT
 DOMAIN-SUFFIX,51la.net,REJECT
 DOMAIN,cig.com.cn,REJECT
@@ -99,17 +101,14 @@ DOMAIN-SUFFIX,hockeyapp.net,REJECT
 DOMAIN,ipm.atm.youku.com,REJECT
 DOMAIN,iyes.youku.com,REJECT
 DOMAIN-SUFFIX,criteo.com,REJECT
-
 DOMAIN-SUFFIX,mobileapptracking.com,REJECT
 
 //江阴bus
 DOMAIN,stats.jpush.cn,REJECT
 DOMAIN,wx.hfxing.cn,REJECT
 DOMAIN,ali-stats.jpush.cn,REJECT
-DOMAIN,experiment.appadhoc.com,REJECT
 
 # > KFC
-DOMAIN,tracker.appadhoc.com,REJECT
 DOMAIN,fp.hwwt8.com,REJECT
 DOMAIN,trackingprd.hwwt8.com,REJECT
 
@@ -131,7 +130,6 @@ DOMAIN,fuwu.wap.sogou.com,REJECT
 
 DOMAIN-SUFFIX,appodeal.com,REJECT
 DOMAIN-SUFFIX,applvn.com,REJECT
-DOMAIN,x.appbaqend.com,REJECT
 DOMAIN-SUFFIX,inner-active.mobi,REJECT
 DOMAIN-SUFFIX,applovin.com,REJECT
 DOMAIN,union.uc.cn,REJECT
@@ -144,8 +142,14 @@ DOMAIN,ad-stat.ksosoft.com,REJECT
 DOMAIN-SUFFIX,kingsoft-office-service.com,REJECT
 USER-AGENT,wpsoffice*,REJECT
 
+DOMAIN-SUFFIX,umeng.com,REJECT
+DOMAIN-SUFFIX,nuomi.com,REJECT
+DOMAIN-SUFFIX,opnstat.baidu.com,REJECT
+DOMAIN-SUFFIX,zt.baidu.com,REJECT
+
 # Proxy
 
+DOMAIN,e.crashlytics.com,Proxy
 DOMAIN-SUFFIX,inoreader.com,Proxy
 DOMAIN-SUFFIX,muncloud.me,Proxy
 DOMAIN-SUFFIX,nexitcore.com,Proxy
@@ -164,7 +168,6 @@ DOMAIN-SUFFIX,app-measurement.com,Proxy
 DOMAIN-SUFFIX,msauth.net,Proxy
 DOMAIN-SUFFIX,hotmail.com,Proxy
 DOMAIN-SUFFIX,pixiv.cat,Proxy
-
 DOMAIN-SUFFIX,pximg.net,Proxy
 DOMAIN-SUFFIX,zaobao.com.sg,Proxy
 DOMAIN-SUFFIX,playno1.com,Proxy
@@ -172,18 +175,12 @@ DOMAIN-SUFFIX,sehuatang.net,Proxy
 DOMAIN-SUFFIX,cloudflare.com,Proxy
 DOMAIN-SUFFIX,qualtrics.com,Proxy
 DOMAIN-SUFFIX,evernote.com,Proxy
-
 DOMAIN,login.live.com,Proxy
-
 DOMAIN-SUFFIX,vfast.cc,Proxy
-
 DOMAIN-SUFFIX,nationalgeographic.com,Proxy
 DOMAIN-SUFFIX,liuli.uk,Proxy
-DOMAIN-SUFFIX,graph.facebook.com,DIRECT
-DOMAIN-SUFFIX,nuomi.com,REJECT
-DOMAIN-SUFFIX,opnstat.baidu.com,REJECT
-DOMAIN-SUFFIX,zt.baidu.com,REJECT
 
+DOMAIN-SUFFIX,graph.facebook.com,DIRECT
 DOMAIN-SUFFIX,services.mozilla.com,DIRECT
 IP-CIDR,239.255.255.250/32,DIRECT,no-resolve
 IP-CIDR,224.0.0.251/32,DIRECT,no-resolve
