--- a/surge/lhie1.conf
+++ b/surge/lhie1.conf
@@ -5,7 +5,7 @@ ipv6 = false
 force-http-engine-hosts = 123.59.31.1,119.18.193.135,122.14.246.33
 enhanced-mode-by-rule = 1
 show-error-page-for-reject = true
-dns-server = 119.29.29.29, 114.114.114.114
+dns-server = 119.29.29.29, 114.114.114.114,system
 allow-wifi-access = false
 network-framework = false
 
@@ -93,10 +93,7 @@ DOMAIN,ta.trs.cn,REJECT
 DOMAIN,tingyun.com,REJECT
 DOMAIN-SUFFIX,mob.com,REJECT
 DOMAIN-SUFFIX,trackingio.com,REJECT
-DOMAIN-SUFFIX,inmobi.cn,REJECT
 DOMAIN-SUFFIX,moatads.com,REJECT
-DOMAIN-SUFFIX,inmobi.com,REJECT
-DOMAIN-SUFFIX,inmobicdn.cn,REJECT
 DOMAIN-SUFFIX,hockeyapp.net,REJECT
 DOMAIN,ipm.atm.youku.com,REJECT
 DOMAIN,iyes.youku.com,REJECT
@@ -113,7 +110,6 @@ DOMAIN,fp.hwwt8.com,REJECT
 DOMAIN,trackingprd.hwwt8.com,REJECT
 
 DOMAIN-SUFFIX,appbaqend.com,REJECT
-DOMAIN-SUFFIX,data.flurry.com,REJECT
 DOMAIN-SUFFIX,qchannel01.cn,REJECT
 
 # > 高德
@@ -129,9 +125,7 @@ DOMAIN-SUFFIX,wgo.mmstat.com,REJECT
 DOMAIN,fuwu.wap.sogou.com,REJECT
 
 DOMAIN-SUFFIX,appodeal.com,REJECT
-DOMAIN-SUFFIX,applvn.com,REJECT
 DOMAIN-SUFFIX,inner-active.mobi,REJECT
-DOMAIN-SUFFIX,applovin.com,REJECT
 DOMAIN,union.uc.cn,REJECT
 DOMAIN-SUFFIX,tlnk.io,REJECT
 DOMAIN-SUFFIX,alexametrics.com,REJECT
@@ -180,6 +174,7 @@ DOMAIN-SUFFIX,vfast.cc,Proxy
 DOMAIN-SUFFIX,nationalgeographic.com,Proxy
 DOMAIN-SUFFIX,liuli.uk,Proxy
 
+DOMAIN,app.adjust.com,DIRECT
 DOMAIN-SUFFIX,graph.facebook.com,DIRECT
 DOMAIN-SUFFIX,services.mozilla.com,DIRECT
 IP-CIDR,239.255.255.250/32,DIRECT,no-resolve
@@ -246,6 +241,32 @@ FINAL,Proxy,dns-failed
 ^http://baidu.com https://www.baidu.com/?tn=simple 302
 ^http://m.baidu.com https://www.baidu.com/?tn=simple 302
 ^https://www.baidu.com\/\?action=static&ms=1&version=css_page_2@0.* - reject
+
+# > 知乎
+^https?:\/\/www\.zhihu\.com\/api\/v4\/community-ad\/ - reject
+^https?:\/\/api\.zhihu\.com\/(launch|real_time) - reject
+^https?:\/\/api\.zhihu\.com\/commercial_api\/(launch|real_time) - reject
+# > 印象笔记
+^https?:\/\/app\.yinxiang\.com\/ads\/ - reject
+# > MI
+^https?:\/\/api\.m\.mi\.com\/v\d\/app\/start - reject
+^https?:\/\/api\.jr\.mi\.com\/v\d\/adv\/ - reject
+^https?:\/\/api\.jr\.mi\.com\/jr\/api\/playScreen - reject
+# > MI_Fit
+^https?:\/\/api-mifit.+\.huami\.com\/discovery\/mi\/discovery\/.+_ad\? - reject
+# > Kingsoft WPS
+^https?:\/\/ios\.wps\.cn\/ad-statistics-service - reject
+^https?:\/\/mobile-pic\.cache\.iciba\.com\/feeds_ad\/ - reject
+^https?:\/\/.+\.kingsoft-office-service\.com\/ad - reject
+# > Kingsoft PowerWord
+^https?:\/\/dict-mobile\.iciba\.com\/interface\/index\.php\?.+(c=ad|collectFeedsAdShowCount|KSFeedsAdCardViewController) - reject
+# >> 百度贴吧
+^https?:\/\/c\.tieba\.baidu\.com\/c\/s\/splashSchedule - reject
+^https?:\/\/c\.tieba\.baidu\.com\/c\/f\/forum\/getAdInfo - reject
+^https?:\/\/c\.tieba\.baidu\.com\/\w+\/\w+\/(sync|newRnSync|mlog) - reject
+# >> 百度地图
+# ^https?:\/\/.+\/client\/phpui2\/ - reject
+^https?:\/\/ss0\.bdstatic\.com/.+_\d{3}_\d{4}\.jpg - reject
 
 [Header Rewrite]
 ^https?://zhidao\.baidu\.com header-replace User-Agent Mozilla/5.0 (Macintosh; Intel Mac OS X 10_13_6) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/12.0.2 Safari/605.1.15
