--- a/surge/lhie1.conf
+++ b/surge/lhie1.conf
@@ -22,10 +22,10 @@ network-framework = false
 🇩🇪gia = ss, 82.129.30.6, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, obfs=http, obfs-host=world.taobao.com, udp-relay=true
 
 
-ss = ss, vtyk.nbclouds.co ,1142, encrypt-method=chacha20, password=cf34c5e8c479, obfs=http, obfs-host=ODQ1ODQ2MDcgIAk6ZmE4NzhkZTQ4MGZkNGRiMg, udp-relay=true
+🇯🇵nex = ss, vtyk.nbclouds.co ,1142, encrypt-method=chacha20, password=cf34c5e8c479, obfs=http, obfs-host=ODQ1ODQ2MDcgIAk6ZmE4NzhkZTQ4MGZkNGRiMg, udp-relay=true
 google = ss, 34.80.227.122, 543, encrypt-method=chacha20-ietf, password=ss745201, udp-relay=true
 [Proxy Group]
-Proxy = select, 🇺🇸gia8, google, 🇩🇪gia
+Proxy = select, 🇺🇸gia8, google, 🇩🇪gia, 🇯🇵nex
 油管 = select, Proxy, google, 🇸🇬IPLC
 tw = select, Proxy, 🇨🇳CHT11
 game = select, DIRECT, Proxy
