--- a/Shadowrocket.conf
+++ b/Shadowrocket.conf
@@ -1,13 +1,16 @@
+# Shadowrocket: 2019-09-30 14:00:53
 [General]
+dns-server = 
+ipv6 = false
+skip-proxy = 192.168.0.0/16,193.168.0.0/16,10.0.0.0/8,172.16.0.0/12,100.64.0.0/10,127.0.0.1,17.0.0.0/8,localhost,*.local
 bypass-system = true
-skip-proxy = 192.168.0.0/16, 193.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, 100.64.0.0/10, 127.0.0.1, 17.0.0.0/8, localhost, *.local
 bypass-tun = 10.0.0.0/8,100.64.0.0/10,127.0.0.0/8,169.254.0.0/16,172.16.0.0/12,192.0.0.0/24,192.0.2.0/24,192.88.99.0/24,192.168.0.0/16,198.18.0.0/15,198.51.100.0/24,203.0.113.0/24,224.0.0.0/4,255.255.255.255/32
-dns-server = 119.29.29.29,114.114.114.114,system
+doh-server-only = true
+doh-server-url = https://dns.rubyfish.cn/dns-query
+update-url = https://raw.githubusercontent.com/olocn/rule/master/Shadowrocket.conf
+
 
 [Rule]
-
-//apple
-# > Apple
 DOMAIN-SUFFIX,aaplimg.com,DIRECT
 DOMAIN-SUFFIX,apple.co,DIRECT
 DOMAIN-SUFFIX,apple.com,DIRECT
@@ -20,7 +23,6 @@ DOMAIN-SUFFIX,me.com,DIRECT
 DOMAIN-SUFFIX,mzstatic.com,DIRECT
 DOMAIN,www-cdn.icloud.com.akadns.net,DIRECT
 IP-CIDR,17.0.0.0/8,DIRECT,no-resolve
-
 DOMAIN-SUFFIX,appadhoc.com,REJECT
 DOMAIN,log.mmstat.com,REJECT
 DOMAIN-SUFFIX,51la.net,REJECT
@@ -35,20 +37,13 @@ DOMAIN,ipm.atm.youku.com,REJECT
 DOMAIN,iyes.youku.com,REJECT
 DOMAIN-SUFFIX,criteo.com,REJECT
 DOMAIN-SUFFIX,mobileapptracking.com,REJECT
-
-//江阴bus
 DOMAIN,stats.jpush.cn,REJECT
 DOMAIN,wx.hfxing.cn,REJECT
 DOMAIN,ali-stats.jpush.cn,REJECT
-
-# > KFC
 DOMAIN,fp.hwwt8.com,REJECT
 DOMAIN,trackingprd.hwwt8.com,REJECT
-
 DOMAIN-SUFFIX,appbaqend.com,REJECT
 DOMAIN-SUFFIX,qchannel01.cn,REJECT
-
-# > 高德
 DOMAIN,logs.amap.com,REJECT
 DOMAIN,aoscdn.amap.com,REJECT
 DOMAIN,page.amap.com,REJECT
@@ -56,36 +51,28 @@ DOMAIN,sync.amap.com,REJECT
 DOMAIN,aos-cdn-image.amap.com,REJECT
 DOMAIN,wb.amap.com,REJECT
 DOMAIN,f.amap.com,REJECT
-
 DOMAIN-SUFFIX,wgo.mmstat.com,REJECT
 DOMAIN,fuwu.wap.sogou.com,REJECT
-
 DOMAIN-SUFFIX,appodeal.com,REJECT
 DOMAIN-SUFFIX,inner-active.mobi,REJECT
 DOMAIN,union.uc.cn,REJECT
 DOMAIN-SUFFIX,tlnk.io,REJECT
 DOMAIN-SUFFIX,alexametrics.com,REJECT
-
-# > WPS
 DOMAIN,img.auction-ads.wpscdn.cn,REJECT
 DOMAIN,ad-stat.ksosoft.com,REJECT
 DOMAIN-SUFFIX,kingsoft-office-service.com,REJECT
 USER-AGENT,wpsoffice*,REJECT
-
 DOMAIN-SUFFIX,umeng.com,REJECT
 DOMAIN-SUFFIX,nuomi.com,REJECT
 DOMAIN-SUFFIX,opnstat.baidu.com,REJECT
 DOMAIN-SUFFIX,zt.baidu.com,REJECT
-
-# PROXY
-
 DOMAIN,e.crashlytics.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,inoreader.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,muncloud.me,PROXY,force-remote-dns
 DOMAIN-SUFFIX,nexitcore.com,PROXY,force-remote-dns
 DOMAIN,graph.microsoft.com,PROXY,force-remote-dns
 DOMAIN,oneclient.sfx.ms,PROXY,force-remote-dns
-DOMAIN-SUFFIX,scribd.com,PROXY,force-remote-dns 
+DOMAIN-SUFFIX,scribd.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,scupio.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,creativecdn.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,aralego.com,PROXY,force-remote-dns
@@ -111,7 +98,6 @@ DOMAIN-SUFFIX,nationalgeographic.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,liuli.uk,PROXY,force-remote-dns
 DOMAIN-SUFFIX,p0rn-downloads.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,imagetwist.com,PROXY,force-remote-dns
-
 DOMAIN,app.adjust.com,DIRECT
 DOMAIN-SUFFIX,graph.facebook.com,DIRECT
 DOMAIN-SUFFIX,services.mozilla.com,DIRECT
@@ -120,14 +106,11 @@ IP-CIDR,224.0.0.251/32,DIRECT,no-resolve
 DOMAIN,login.microsoftonline.com,DIRECT
 DOMAIN-SUFFIX,v2ex.com,DIRECT
 DOMAIN-SUFFIX,letsencrypt.org,DIRECT
-DOMAIN-SUFFIX,digicert.com,direct
-
-# > General
+DOMAIN-SUFFIX,digicert.com,DIRECT
 DOMAIN-KEYWORD,umeng,REJECT
 DOMAIN-KEYWORD,adservice,REJECT
 DOMAIN-KEYWORD,analytics,REJECT
 DOMAIN-KEYWORD,analysis,REJECT
-
 DOMAIN-SUFFIX,42trck.com,REJECT
 DOMAIN-SUFFIX,51.la,REJECT
 DOMAIN-SUFFIX,adjust.com,REJECT
@@ -167,7 +150,6 @@ DOMAIN-SUFFIX,tanv.com,REJECT
 DOMAIN-SUFFIX,tanx.com,REJECT
 DOMAIN-SUFFIX,uri6.com,REJECT
 DOMAIN-SUFFIX,xdrig.com,REJECT
-
 DOMAIN-SUFFIX,ad.daum.net,REJECT
 DOMAIN-SUFFIX,track.xiachufang.com,REJECT
 DOMAIN-SUFFIX,deliver.ifeng.com,REJECT
@@ -206,17 +188,11 @@ DOMAIN,track.tiara.kakao.com,REJECT
 DOMAIN,trackapp.guahao.cn,REJECT
 DOMAIN,traffic.mogujie.com,REJECT
 DOMAIN,wmlog.meituan.com,REJECT
-
-# > Umeng
 DOMAIN-SUFFIX,umengcloud.com,REJECT
-
-# > Apple
 DOMAIN-SUFFIX,iadsdk.apple.com,REJECT
 DOMAIN-SUFFIX,ads.internal.unity3d.com,REJECT
 DOMAIN-SUFFIX,ads.prd.ie.internal.unity3d.com,REJECT
 DOMAIN-SUFFIX,unityads.unity3d.com,REJECT
-
-# > Alibaba
 DOMAIN,acs4baichuan.m.taobao.com,REJECT
 DOMAIN,adash.m.taobao.com,REJECT
 DOMAIN,adash.man.aliyuncs.com,REJECT
@@ -228,8 +204,6 @@ DOMAIN,adashx4yt.m.taobao.com,REJECT
 DOMAIN,h-adashx.ut.taobao.com,REJECT
 DOMAIN,nbsdk-baichuan.alicdn.com,REJECT
 DOMAIN,tunion-api.m.taobao.com,REJECT
-
-# > Baidu
 DOMAIN-SUFFIX,baidustatic.com,REJECT
 DOMAIN-SUFFIX,cpro.baidu.com,REJECT
 DOMAIN-SUFFIX,pos.baidu.com,REJECT
@@ -241,9 +215,6 @@ DOMAIN,hmma.baidu.com,REJECT
 DOMAIN,mobads.baidu.com,REJECT
 DOMAIN,mobads-logs.baidu.com,REJECT
 DOMAIN,nsclick.baidu.com,REJECT
-
-
-# > Google
 DOMAIN-SUFFIX,doubleclick.net,REJECT
 DOMAIN-SUFFIX,googleadservices.com,REJECT
 DOMAIN-SUFFIX,googleadsserving.cn,REJECT
@@ -251,8 +222,6 @@ DOMAIN-SUFFIX,googlesyndication.com,REJECT
 DOMAIN-SUFFIX,googletagmanager.com,REJECT
 DOMAIN-SUFFIX,googletagservices.com,REJECT
 DOMAIN-SUFFIX,google-analytics.com,REJECT
-
-# > MI
 DOMAIN-SUFFIX,ad.xiaomi.com,REJECT
 DOMAIN-SUFFIX,admob.xiaomi.com,REJECT
 DOMAIN-SUFFIX,ad.intl.xiaomi.com,REJECT
@@ -260,8 +229,6 @@ DOMAIN-SUFFIX,tracking.miui.com,REJECT
 DOMAIN,adv.sec.miui.com,REJECT
 DOMAIN,adv.sec.intl.miui.com,REJECT
 DOMAIN,o2o.api.xiaomi.com,REJECT
-
-# > Tencent
 DOMAIN-SUFFIX,beacon.qq.com,REJECT
 DOMAIN-SUFFIX,bugly.qq.com,REJECT
 DOMAIN-SUFFIX,e.qq.com,REJECT
@@ -280,16 +247,11 @@ DOMAIN,splashqqlive.gtimg.com,REJECT
 DOMAIN,tajs.qq.com,REJECT
 DOMAIN,wxsnsdy.wxs.qq.com,REJECT
 DOMAIN,wxsnsdythumb.wxs.qq.com,REJECT
-
-# > Youtube
 USER-AGENT,com.google.ios.youtube*,PROXY,force-remote-dns
 USER-AGENT,YouTube*,PROXY,force-remote-dns
 DOMAIN-SUFFIX,googlevideo.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,youtube.com,PROXY,force-remote-dns
 DOMAIN,youtubei.googleapis.com,PROXY,force-remote-dns
-
-# (DNS Cache Pollution Protection)
-# > Google
 DOMAIN-SUFFIX,appspot.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,blogger.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,getoutline.org,PROXY,force-remote-dns
@@ -299,10 +261,8 @@ DOMAIN-SUFFIX,gvt3.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,xn--ngstr-lra8j.com,PROXY,force-remote-dns
 DOMAIN-KEYWORD,google,PROXY,force-remote-dns
 DOMAIN-KEYWORD,blogspot,PROXY,force-remote-dns
-# > Microsoft
 DOMAIN-SUFFIX,onedrive.live.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,xboxlive.com,PROXY,force-remote-dns
-# > Facebook
 DOMAIN-SUFFIX,cdninstagram.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,fb.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,fb.me,PROXY,force-remote-dns
@@ -325,7 +285,6 @@ IP-CIDR,54.93.124.31/32,PROXY,no-resolve
 IP-CIDR,54.173.34.141/32,PROXY,no-resolve
 IP-CIDR,54.235.23.242/32,PROXY,no-resolve
 IP-CIDR,169.45.248.118/32,PROXY,no-resolve
-# > Twitter
 DOMAIN-SUFFIX,pscp.tv,PROXY,force-remote-dns
 DOMAIN-SUFFIX,periscope.tv,PROXY,force-remote-dns
 DOMAIN-SUFFIX,t.co,PROXY,force-remote-dns
@@ -334,7 +293,6 @@ DOMAIN-SUFFIX,twimg.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,twitpic.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,vine.co,PROXY,force-remote-dns
 DOMAIN-KEYWORD,twitter,PROXY,force-remote-dns
-# > Telegram
 DOMAIN-SUFFIX,t.me,PROXY,force-remote-dns
 DOMAIN-SUFFIX,tdesktop.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,telegra.ph,PROXY,force-remote-dns
@@ -349,7 +307,6 @@ IP-CIDR,91.108.56.0/22,PROXY,no-resolve
 IP-CIDR,109.239.140.0/24,PROXY,no-resolve
 IP-CIDR,149.154.160.0/20,PROXY,no-resolve
 IP-CIDR,205.172.60.0/22,PROXY,no-resolve
-# > Line
 DOMAIN-SUFFIX,line.me,PROXY,force-remote-dns
 DOMAIN-SUFFIX,line-apps.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,line-scdn.net,PROXY,force-remote-dns
@@ -358,7 +315,6 @@ IP-CIDR,103.2.30.0/23,PROXY,no-resolve
 IP-CIDR,125.209.208.0/20,PROXY,no-resolve
 IP-CIDR,147.92.128.0/17,PROXY,no-resolve
 IP-CIDR,203.104.144.0/21,PROXY,no-resolve
-# > Other
 DOMAIN-SUFFIX,4shared.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,520cc.cc,PROXY,force-remote-dns
 DOMAIN-SUFFIX,881903.com,PROXY,force-remote-dns
@@ -653,8 +609,6 @@ DOMAIN-KEYWORD,jav,PROXY,force-remote-dns
 DOMAIN-KEYWORD,pinterest,PROXY,force-remote-dns
 DOMAIN-KEYWORD,porn,PROXY,force-remote-dns
 DOMAIN-KEYWORD,wikileaks,PROXY,force-remote-dns
-
-# (Region-Restricted Access Denied)
 DOMAIN-SUFFIX,apartmentratings.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,apartments.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,bankmobilevibe.com,PROXY,force-remote-dns
@@ -702,25 +656,14 @@ DOMAIN-SUFFIX,vsco.co,PROXY,force-remote-dns
 DOMAIN-SUFFIX,xfinity.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,zattoo.com,PROXY,force-remote-dns
 USER-AGENT,Roam*,PROXY,force-remote-dns
-
-# (The Most Popular Sites)
-# > Apple
-# >> TestFlight
 DOMAIN,testflight.apple.com,PROXY,force-remote-dns
-# >> Apple URL Shortener
 DOMAIN-SUFFIX,appsto.re,PROXY,force-remote-dns
-# >> iBooks Store download
 DOMAIN,books.itunes.apple.com,PROXY,force-remote-dns
-# >> iTunes Store Moveis Trailers
 DOMAIN,hls.itunes.apple.com,PROXY,force-remote-dns
-# >> App Store Preview
 DOMAIN,apps.apple.com,PROXY,force-remote-dns
 DOMAIN,itunes.apple.com,PROXY,force-remote-dns
-# >> Spotlight
 DOMAIN,api-glb-sea.smoot.apple.com,PROXY,force-remote-dns
-# >> Dictionary
 DOMAIN,lookup-api.apple.com,PROXY,force-remote-dns
-# >> Apple News and Apple Map TOMTOM Version
 DOMAIN,gspe1-ssl.ls.apple.com,PROXY,force-remote-dns
 USER-AGENT,AppleNews*,PROXY,force-remote-dns
 USER-AGENT,com.apple.news*,PROXY,force-remote-dns
@@ -729,7 +672,6 @@ DOMAIN,news-client.apple.com,PROXY,force-remote-dns
 DOMAIN,news-edge.apple.com,PROXY,force-remote-dns
 DOMAIN,news-events.apple.com,PROXY,force-remote-dns
 DOMAIN,apple.comscoreresearch.com,PROXY,force-remote-dns
-# > Google
 DOMAIN-SUFFIX,abc.xyz,PROXY,force-remote-dns
 DOMAIN-SUFFIX,android.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,androidify.com,PROXY,force-remote-dns
@@ -775,8 +717,6 @@ DOMAIN-SUFFIX,x.company,PROXY,force-remote-dns
 DOMAIN-SUFFIX,youtu.be,PROXY,force-remote-dns
 DOMAIN-SUFFIX,yt.be,PROXY,force-remote-dns
 DOMAIN-SUFFIX,ytimg.com,PROXY,force-remote-dns
-# > Microsoft
-# >> Microsoft OneDrive
 DOMAIN-SUFFIX,1drv.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,1drv.ms,PROXY,force-remote-dns
 DOMAIN-SUFFIX,blob.core.windows.net,PROXY,force-remote-dns
@@ -785,7 +725,6 @@ DOMAIN-SUFFIX,onedrive.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,storage.live.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,storage.msn.com,PROXY,force-remote-dns
 DOMAIN,oneclient.sfx.ms,PROXY,force-remote-dns
-# > Other
 DOMAIN-SUFFIX,0rz.tw,PROXY,force-remote-dns
 DOMAIN-SUFFIX,4bluestones.biz,PROXY,force-remote-dns
 DOMAIN-SUFFIX,9bis.net,PROXY,force-remote-dns
@@ -846,19 +785,9 @@ DOMAIN-SUFFIX,x-art.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,yimg.com,PROXY,force-remote-dns
 DOMAIN,api.steampowered.com,PROXY,force-remote-dns
 DOMAIN,store.steampowered.com,PROXY,force-remote-dns
-
-# China Area Network
-# > 360
 DOMAIN-SUFFIX,qhres.com,DIRECT
 DOMAIN-SUFFIX,qhimg.com,DIRECT
-# > Akamai
 DOMAIN-SUFFIX,akadns.net,DIRECT
-# DOMAIN-SUFFIX,akamai.net,DIRECT
-# DOMAIN-SUFFIX,akamaiedge.net,DIRECT
-# DOMAIN-SUFFIX,akamaihd.net,DIRECT
-# DOMAIN-SUFFIX,akamaistream.net,DIRECT
-# DOMAIN-SUFFIX,akamaized.net,DIRECT
-# > Alibaba
 USER-AGENT,%E4%BC%98%E9%85%B7*,DIRECT
 DOMAIN-SUFFIX,alibaba.com,DIRECT
 DOMAIN-SUFFIX,alicdn.com,DIRECT
@@ -876,7 +805,6 @@ DOMAIN-SUFFIX,ykimg.com,DIRECT
 DOMAIN-SUFFIX,youku.com,DIRECT
 DOMAIN-SUFFIX,xiami.com,DIRECT
 DOMAIN-SUFFIX,xiami.net,DIRECT
-# > Apple
 DOMAIN-SUFFIX,aaplimg.com,DIRECT
 DOMAIN-SUFFIX,apple.co,DIRECT
 DOMAIN-SUFFIX,apple.com,DIRECT
@@ -888,37 +816,30 @@ DOMAIN-SUFFIX,icloud-content.com,DIRECT
 DOMAIN-SUFFIX,me.com,DIRECT
 DOMAIN-SUFFIX,mzstatic.com,DIRECT
 DOMAIN,www-cdn.icloud.com.akadns.net,DIRECT
-# > Baidu
 DOMAIN-SUFFIX,baidu.com,DIRECT
 DOMAIN-SUFFIX,baidubcr.com,DIRECT
 DOMAIN-SUFFIX,bdstatic.com,DIRECT
 DOMAIN-SUFFIX,yunjiasu-cdn.net,DIRECT
-# > bilibili
 DOMAIN-SUFFIX,acgvideo.com,DIRECT
 DOMAIN-SUFFIX,biliapi.com,DIRECT
 DOMAIN-SUFFIX,biliapi.net,DIRECT
 DOMAIN-SUFFIX,bilibili.com,DIRECT
 DOMAIN-SUFFIX,bilibili.tv,DIRECT
 DOMAIN-SUFFIX,hdslb.com,DIRECT
-# > Blizzard
 DOMAIN-SUFFIX,blizzard.com,DIRECT
 DOMAIN-SUFFIX,battle.net,DIRECT
 DOMAIN,blzddist1-a.akamaihd.net,DIRECT
-# > ByteDance
 DOMAIN-SUFFIX,feiliao.com,DIRECT
 DOMAIN-SUFFIX,pstatp.com,DIRECT
 DOMAIN-SUFFIX,snssdk.com,DIRECT
 DOMAIN-SUFFIX,iesdouyin.com,DIRECT
 DOMAIN-SUFFIX,toutiao.com,DIRECT
-# > CCTV
 DOMAIN-SUFFIX,cctv.com,DIRECT
 DOMAIN-SUFFIX,cctvpic.com,DIRECT
 DOMAIN-SUFFIX,livechina.com,DIRECT
-# > DiDi
 DOMAIN-SUFFIX,didialift.com,DIRECT
 DOMAIN-SUFFIX,didiglobal.com,DIRECT
 DOMAIN-SUFFIX,udache.com,DIRECT
-# > 蛋蛋赞
 DOMAIN-SUFFIX,343480.com,DIRECT
 DOMAIN-SUFFIX,baduziyuan.com,DIRECT
 DOMAIN-SUFFIX,com-hs-hkdy.com,DIRECT
@@ -926,35 +847,27 @@ DOMAIN-SUFFIX,czybjz.com,DIRECT
 DOMAIN-SUFFIX,dandanzan.com,DIRECT
 DOMAIN-SUFFIX,fjhps.com,DIRECT
 DOMAIN-SUFFIX,kuyunbo.club,DIRECT
-# > ChinaNet
 DOMAIN-SUFFIX,21cn.com,DIRECT
-# > HunanTV
 DOMAIN-SUFFIX,hitv.com,DIRECT
 DOMAIN-SUFFIX,mgtv.com,DIRECT
-# > iQiyi
 DOMAIN-SUFFIX,iqiyi.com,DIRECT
 DOMAIN-SUFFIX,iqiyipic.com,DIRECT
 DOMAIN-SUFFIX,71.am.com,DIRECT
-# > JD
 DOMAIN-SUFFIX,jd.com,DIRECT
 DOMAIN-SUFFIX,jd.hk,DIRECT
 DOMAIN-SUFFIX,jdpay.com,DIRECT
 DOMAIN-SUFFIX,360buyimg.com,DIRECT
-# > Kingsoft
 DOMAIN-SUFFIX,iciba.com,DIRECT
 DOMAIN-SUFFIX,ksosoft.com,DIRECT
-# > Meitu
 DOMAIN-SUFFIX,meitu.com,DIRECT
 DOMAIN-SUFFIX,meitudata.com,DIRECT
 DOMAIN-SUFFIX,meitustat.com,DIRECT
 DOMAIN-SUFFIX,meipai.com,DIRECT
-# > MI
 DOMAIN-SUFFIX,duokan.com,DIRECT
 DOMAIN-SUFFIX,mi-img.com,DIRECT
 DOMAIN-SUFFIX,miui.com,DIRECT
 DOMAIN-SUFFIX,miwifi.com,DIRECT
 DOMAIN-SUFFIX,xiaomi.com,DIRECT
-# > Microsoft
 DOMAIN-SUFFIX,microsoft.com,DIRECT
 DOMAIN-SUFFIX,msecnd.net,DIRECT
 DOMAIN-SUFFIX,office365.com,DIRECT
@@ -964,7 +877,6 @@ DOMAIN-SUFFIX,visualstudio.com,DIRECT
 DOMAIN-SUFFIX,windows.com,DIRECT
 DOMAIN-SUFFIX,windowsupdate.com,DIRECT
 DOMAIN,officecdn-microsoft-com.akamaized.net,DIRECT
-# > NetEase
 USER-AGENT,NeteaseMusic*,DIRECT
 USER-AGENT,%E7%BD%91%E6%98%93%E4%BA%91%E9%9F%B3%E4%B9%90*,DIRECT
 DOMAIN-SUFFIX,163.com,DIRECT
@@ -974,20 +886,16 @@ DOMAIN-SUFFIX,163yun.com,DIRECT
 DOMAIN-SUFFIX,lofter.com,DIRECT
 DOMAIN-SUFFIX,netease.com,DIRECT
 DOMAIN-SUFFIX,ydstatic.com,DIRECT
-# > Sina
 DOMAIN-SUFFIX,sina.com,DIRECT
 DOMAIN-SUFFIX,weibo.com,DIRECT
 DOMAIN-SUFFIX,weibocdn.com,DIRECT
-# > Sohu
 DOMAIN-SUFFIX,sohu.com,DIRECT
 DOMAIN-SUFFIX,sohucs.com,DIRECT
 DOMAIN-SUFFIX,sohu-inc.com,DIRECT
 DOMAIN-SUFFIX,v-56.com,DIRECT
-# > Sogo
 DOMAIN-SUFFIX,sogo.com,DIRECT
 DOMAIN-SUFFIX,sogou.com,DIRECT
 DOMAIN-SUFFIX,sogoucdn.com,DIRECT
-# > Steam
 DOMAIN-SUFFIX,steampowered.com,DIRECT
 DOMAIN-SUFFIX,steam-chat.com,DIRECT
 DOMAIN-SUFFIX,steamgames.com,DIRECT
@@ -996,7 +904,6 @@ DOMAIN-SUFFIX,steamcontent.com,DIRECT
 DOMAIN-SUFFIX,steamstatic.com,DIRECT
 DOMAIN-SUFFIX,steamcdn-a.akamaihd.net,DIRECT
 DOMAIN-SUFFIX,steamstat.us,DIRECT
-# > Tencent
 USER-AGENT,MicroMessenger%20Client,DIRECT
 USER-AGENT,WeChat*,DIRECT
 DOMAIN-SUFFIX,gtimg.com,DIRECT
@@ -1007,7 +914,6 @@ DOMAIN-SUFFIX,myqcloud.com,DIRECT
 DOMAIN-SUFFIX,qq.com,DIRECT
 DOMAIN-SUFFIX,tencent.com,DIRECT
 DOMAIN-SUFFIX,tencent-cloud.net,DIRECT
-# > YYeTs
 USER-AGENT,YYeTs*,DIRECT
 DOMAIN-SUFFIX,jstucdn.com,DIRECT
 DOMAIN-SUFFIX,zimuzu.io,DIRECT
@@ -1016,7 +922,6 @@ DOMAIN-SUFFIX,zmz2019.com,DIRECT
 DOMAIN-SUFFIX,zmzapi.com,DIRECT
 DOMAIN-SUFFIX,zmzapi.net,DIRECT
 DOMAIN-SUFFIX,zmzfile.com,DIRECT
-# > Content Delivery Network
 DOMAIN-SUFFIX,ccgslb.com,DIRECT
 DOMAIN-SUFFIX,ccgslb.net,DIRECT
 DOMAIN-SUFFIX,chinanetcenter.com,DIRECT
@@ -1024,18 +929,14 @@ DOMAIN-SUFFIX,meixincdn.com,DIRECT
 DOMAIN-SUFFIX,ourdvs.com,DIRECT
 DOMAIN-SUFFIX,staticdn.net,DIRECT
 DOMAIN-SUFFIX,wangsu.com,DIRECT
-# > IP Query
 DOMAIN-SUFFIX,ipip.net,DIRECT
 DOMAIN-SUFFIX,ip.la,DIRECT
 DOMAIN-SUFFIX,ip-cdn.com,DIRECT
 DOMAIN-SUFFIX,ipv6-test.com,DIRECT
 DOMAIN-SUFFIX,test-ipv6.com,DIRECT
 DOMAIN-SUFFIX,whatismyip.com,DIRECT
-# > Speed Test
-# DOMAIN-SUFFIX,speedtest.net,DIRECT
 DOMAIN-SUFFIX,netspeedtestmaster.com,DIRECT
 DOMAIN,speedtest.macpaw.com,DIRECT
-# > Private Tracker
 DOMAIN-SUFFIX,awesome-hd.me,DIRECT
 DOMAIN-SUFFIX,broadcasthe.net,DIRECT
 DOMAIN-SUFFIX,chdbits.co,DIRECT
@@ -1057,7 +958,6 @@ DOMAIN-SUFFIX,redacted.ch,DIRECT
 DOMAIN-SUFFIX,springsunday.net,DIRECT
 DOMAIN-SUFFIX,tjupt.org,DIRECT
 DOMAIN-SUFFIX,totheglory.im,DIRECT
-# > Other
 DOMAIN-SUFFIX,cn,DIRECT
 DOMAIN-SUFFIX,360in.com,DIRECT
 DOMAIN-SUFFIX,51ym.me,DIRECT
@@ -1167,25 +1067,22 @@ DOMAIN-SUFFIX,zhihu.com,DIRECT
 DOMAIN-SUFFIX,zhimg.com,DIRECT
 DOMAIN-SUFFIX,zhuihd.com,DIRECT
 DOMAIN,download.jetbrains.com,DIRECT
-
-# Local Area Network
 DOMAIN-SUFFIX,local,DIRECT
 IP-CIDR,192.168.0.0/16,DIRECT
 IP-CIDR,10.0.0.0/8,DIRECT
 IP-CIDR,172.16.0.0/12,DIRECT
 IP-CIDR,127.0.0.0/8,DIRECT
 IP-CIDR,100.64.0.0/10,DIRECT
-
-# GeoIP China
 GEOIP,CN,DIRECT
-
 FINAL,PROXY
 
 
 [URL Rewrite]
 ^https?:\/\/(www.)?(g|google)\.cn https://www.google.com.tw 302
 ^https?:\/\/(www.)?ign\.xn--fiqs8s\/ http://cn.ign.com/ccpref/us 302
-// Wiki
 ^https?:\/\/.+.(m\.)?wikipedia\.org/wiki http://www.wikiwand.com/en 302
 ^https?:\/\/zh.(m\.)?wikipedia\.org/(zh-hans|zh-sg|zh-cn|zh(?=/)) http://www.wikiwand.com/zh 302
 ^https?:\/\/zh.(m\.)?wikipedia\.org/zh-[a-zA-Z]{2,} http://www.wikiwand.com/zh-hant 302
+
+
+
