--- a/Shadowrocket.conf
+++ b/Shadowrocket.conf
@@ -1,12 +1,10 @@
 # Shadowrocket: 2019-09-30 14:00:53
 [General]
-dns-server = 
-ipv6 = false
 skip-proxy = 192.168.0.0/16,193.168.0.0/16,10.0.0.0/8,172.16.0.0/12,100.64.0.0/10,127.0.0.1,17.0.0.0/8,localhost,*.local
 bypass-system = true
 bypass-tun = 10.0.0.0/8,100.64.0.0/10,127.0.0.0/8,169.254.0.0/16,172.16.0.0/12,192.0.0.0/24,192.0.2.0/24,192.88.99.0/24,192.168.0.0/16,198.18.0.0/15,198.51.100.0/24,203.0.113.0/24,224.0.0.0/4,255.255.255.255/32
-doh-server-only = true
-doh-server-url = https://dns.rubyfish.cn/dns-query
+dns-server = 119.29.29.29,8.8.4.4
+ipv6 = false
 update-url = https://raw.githubusercontent.com/olocn/rule/master/Shadowrocket.conf
 
 
@@ -22,7 +20,8 @@ DOMAIN-SUFFIX,icloud-content.com,DIRECT
 DOMAIN-SUFFIX,me.com,DIRECT
 DOMAIN-SUFFIX,mzstatic.com,DIRECT
 DOMAIN,www-cdn.icloud.com.akadns.net,DIRECT
-IP-CIDR,17.0.0.0/8,DIRECT,no-resolve
+
+
 DOMAIN-SUFFIX,appadhoc.com,REJECT
 DOMAIN,log.mmstat.com,REJECT
 DOMAIN-SUFFIX,51la.net,REJECT
@@ -66,6 +65,7 @@ DOMAIN-SUFFIX,umeng.com,REJECT
 DOMAIN-SUFFIX,nuomi.com,REJECT
 DOMAIN-SUFFIX,opnstat.baidu.com,REJECT
 DOMAIN-SUFFIX,zt.baidu.com,REJECT
+
 DOMAIN,e.crashlytics.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,inoreader.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,muncloud.me,PROXY,force-remote-dns
@@ -98,15 +98,19 @@ DOMAIN-SUFFIX,nationalgeographic.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,liuli.uk,PROXY,force-remote-dns
 DOMAIN-SUFFIX,p0rn-downloads.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,imagetwist.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,v2ex.com,PROXY,force-remote-dns
+DOMAIN,login.microsoftonline.com,PROXY,force-remote-dns
+
+
 DOMAIN,app.adjust.com,DIRECT
 DOMAIN-SUFFIX,graph.facebook.com,DIRECT
 DOMAIN-SUFFIX,services.mozilla.com,DIRECT
-IP-CIDR,239.255.255.250/32,DIRECT,no-resolve
-IP-CIDR,224.0.0.251/32,DIRECT,no-resolve
-DOMAIN,login.microsoftonline.com,DIRECT
-DOMAIN-SUFFIX,v2ex.com,DIRECT
 DOMAIN-SUFFIX,letsencrypt.org,DIRECT
 DOMAIN-SUFFIX,digicert.com,DIRECT
+
+IP-CIDR,239.255.255.250/32,DIRECT,no-resolve
+IP-CIDR,224.0.0.251/32,DIRECT,no-resolve
+
 DOMAIN-KEYWORD,umeng,REJECT
 DOMAIN-KEYWORD,adservice,REJECT
 DOMAIN-KEYWORD,analytics,REJECT
@@ -247,6 +251,7 @@ DOMAIN,splashqqlive.gtimg.com,REJECT
 DOMAIN,tajs.qq.com,REJECT
 DOMAIN,wxsnsdy.wxs.qq.com,REJECT
 DOMAIN,wxsnsdythumb.wxs.qq.com,REJECT
+
 USER-AGENT,com.google.ios.youtube*,PROXY,force-remote-dns
 USER-AGENT,YouTube*,PROXY,force-remote-dns
 DOMAIN-SUFFIX,googlevideo.com,PROXY,force-remote-dns
@@ -279,12 +284,14 @@ DOMAIN-SUFFIX,rocksdb.org,PROXY,force-remote-dns
 DOMAIN-SUFFIX,whatsapp.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,whatsapp.net,PROXY,force-remote-dns
 DOMAIN-KEYWORD,facebook,PROXY,force-remote-dns
+
 IP-CIDR,3.123.36.126/32,PROXY,no-resolve
 IP-CIDR,52.58.209.134/32,PROXY,no-resolve
 IP-CIDR,54.93.124.31/32,PROXY,no-resolve
 IP-CIDR,54.173.34.141/32,PROXY,no-resolve
 IP-CIDR,54.235.23.242/32,PROXY,no-resolve
 IP-CIDR,169.45.248.118/32,PROXY,no-resolve
+
 DOMAIN-SUFFIX,pscp.tv,PROXY,force-remote-dns
 DOMAIN-SUFFIX,periscope.tv,PROXY,force-remote-dns
 DOMAIN-SUFFIX,t.co,PROXY,force-remote-dns
@@ -298,6 +305,7 @@ DOMAIN-SUFFIX,tdesktop.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,telegra.ph,PROXY,force-remote-dns
 DOMAIN-SUFFIX,telegram.me,PROXY,force-remote-dns
 DOMAIN-SUFFIX,telegram.org,PROXY,force-remote-dns
+
 IP-CIDR,67.198.55.0/24,PROXY,no-resolve
 IP-CIDR,91.108.4.0/22,PROXY,no-resolve
 IP-CIDR,91.108.8.0/22,PROXY,no-resolve
@@ -315,6 +323,7 @@ IP-CIDR,103.2.30.0/23,PROXY,no-resolve
 IP-CIDR,125.209.208.0/20,PROXY,no-resolve
 IP-CIDR,147.92.128.0/17,PROXY,no-resolve
 IP-CIDR,203.104.144.0/21,PROXY,no-resolve
+
 DOMAIN-SUFFIX,4shared.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,520cc.cc,PROXY,force-remote-dns
 DOMAIN-SUFFIX,881903.com,PROXY,force-remote-dns
@@ -785,6 +794,7 @@ DOMAIN-SUFFIX,x-art.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,yimg.com,PROXY,force-remote-dns
 DOMAIN,api.steampowered.com,PROXY,force-remote-dns
 DOMAIN,store.steampowered.com,PROXY,force-remote-dns
+
 DOMAIN-SUFFIX,qhres.com,DIRECT
 DOMAIN-SUFFIX,qhimg.com,DIRECT
 DOMAIN-SUFFIX,akadns.net,DIRECT
@@ -1067,6 +1077,7 @@ DOMAIN-SUFFIX,zhihu.com,DIRECT
 DOMAIN-SUFFIX,zhimg.com,DIRECT
 DOMAIN-SUFFIX,zhuihd.com,DIRECT
 DOMAIN,download.jetbrains.com,DIRECT
+
 DOMAIN-SUFFIX,local,DIRECT
 IP-CIDR,192.168.0.0/16,DIRECT
 IP-CIDR,10.0.0.0/8,DIRECT
