--- a/Shadowrocket.conf
+++ b/Shadowrocket.conf
@@ -1,4 +1,3 @@
-# Shadowrocket: 2019-09-30 14:00:53
 [General]
 skip-proxy = 192.168.0.0/16,193.168.0.0/16,10.0.0.0/8,172.16.0.0/12,100.64.0.0/10,127.0.0.1,17.0.0.0/8,localhost,*.local
 bypass-system = true
@@ -9,17 +8,17 @@ update-url = https://raw.githubusercontent.com/olocn/rule/master/Shadowrocket.co
 
 
 [Rule]
-DOMAIN-SUFFIX,aaplimg.com,DIRECT
-DOMAIN-SUFFIX,apple.co,DIRECT
-DOMAIN-SUFFIX,apple.com,DIRECT
-DOMAIN-SUFFIX,appstore.com,DIRECT
-DOMAIN-SUFFIX,cdn-apple.com,DIRECT
-DOMAIN-SUFFIX,crashlytics.com,DIRECT
-DOMAIN-SUFFIX,icloud.com,DIRECT
-DOMAIN-SUFFIX,icloud-content.com,DIRECT
-DOMAIN-SUFFIX,me.com,DIRECT
-DOMAIN-SUFFIX,mzstatic.com,DIRECT
-DOMAIN,www-cdn.icloud.com.akadns.net,DIRECT
+DOMAIN-SUFFIX,aaplimg.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,apple.co,PROXY,force-remote-dns
+DOMAIN-SUFFIX,apple.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,appstore.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,cdn-apple.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,crashlytics.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,icloud.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,icloud-content.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,me.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,mzstatic.com,PROXY,force-remote-dns
+DOMAIN,www-cdn.icloud.com.akadns.net,PROXY,force-remote-dns
 
 
 DOMAIN-SUFFIX,appadhoc.com,REJECT
