--- a/surge/lhie1.conf
+++ b/surge/lhie1.conf
@@ -20,10 +20,9 @@ network-framework = false
 🇯🇵7 = ss, 175.102.11.185, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, obfs=http, obfs-host=world.taobao.com, udp-relay=true
 🇺🇸gia8 = ss, 103.102.7.28, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, obfs=http, obfs-host=world.taobao.com, udp-relay=true
 🇩🇪gia = ss, 82.129.30.6, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, obfs=http, obfs-host=world.taobao.com, udp-relay=true
-
+🇸🇬IPLC2 =ss, 47.106.59.183, 152, encrypt-method=chacha20-ietf-poly1305, password=UrTAdN, obfs=tls, obfs-host=dba6929811.wns.windows.com, udp-relay=true
 
 🇯🇵nex = ss, vtyk.nbclouds.co ,1142, encrypt-method=chacha20, password=cf34c5e8c479, obfs=http, obfs-host=ODQ1ODQ2MDcgIAk6ZmE4NzhkZTQ4MGZkNGRiMg, udp-relay=true
-google = ss, 34.80.227.122, 543, encrypt-method=chacha20-ietf, password=ss745201, udp-relay=true
 [Proxy Group]
 Proxy = select, 🇺🇸gia8, google, 🇩🇪gia, 🇯🇵nex
 油管 = select, Proxy, google, 🇸🇬IPLC
@@ -173,16 +172,35 @@ DOMAIN,login.live.com,Proxy
 DOMAIN-SUFFIX,vfast.cc,Proxy
 DOMAIN-SUFFIX,nationalgeographic.com,Proxy
 DOMAIN-SUFFIX,liuli.uk,Proxy
+DOMAIN-SUFFIX,p0rn-downloads.com,Proxy
+DOMAIN-SUFFIX,imagetwist.com,Proxy
+DOMAIN-SUFFIX,gravatar.com,Proxy
+DOMAIN-SUFFIX,dlercloud.io,Proxy
+DOMAIN-SUFFIX,hacg.fi,Proxy
+DOMAIN-SUFFIX,feedx.net,Proxy
+DOMAIN-SUFFIX,v2ex.com,Proxy
+DOMAIN-SUFFIX,feedburner.com,Proxy
+DOMAIN-SUFFIX,rrys.tv,Proxy
+DOMAIN-SUFFIX,kindle4rss.com,Proxy
+DOMAIN-SUFFIX,rsshub.app,Proxy
+DOMAIN-SUFFIX,dmhy.org,Proxy
+DOMAIN-SUFFIX,feedx.co,Proxy
+DOMAIN-SUFFIX,vol.moe,Proxy
+
+
+
 
 DOMAIN,app.adjust.com,DIRECT
 DOMAIN-SUFFIX,graph.facebook.com,DIRECT
 DOMAIN-SUFFIX,services.mozilla.com,DIRECT
 IP-CIDR,239.255.255.250/32,DIRECT,no-resolve
 IP-CIDR,224.0.0.251/32,DIRECT,no-resolve
-DOMAIN,login.microsoftonline.com,DIRECT
-DOMAIN-SUFFIX,v2ex.com,DIRECT
 DOMAIN-SUFFIX,letsencrypt.org,DIRECT
-
+DOMAIN,login.microsoftonline.com,DIRECT
+DOMAIN-SUFFIX,letsencrypt.org,DIRECT
+DOMAIN-SUFFIX,digicert.com,DIRECT
+DOMAIN-SUFFIX,ifanr.com,DIRECT
+DOMAIN-SUFFIX,engadget.com,DIRECT
 
 //Siri
 #USER-AGENT,*AssistantServices*,DIRECT
