--- a/surge/lhie1.conf
+++ b/surge/lhie1.conf
@@ -24,8 +24,8 @@ network-framework = false
 
 🇯🇵nex = ss, vtyk.nbclouds.co ,1142, encrypt-method=chacha20, password=cf34c5e8c479, obfs=http, obfs-host=ODQ1ODQ2MDcgIAk6ZmE4NzhkZTQ4MGZkNGRiMg, udp-relay=true
 [Proxy Group]
-Proxy = select, 🇺🇸gia8, google, 🇩🇪gia, 🇯🇵nex
-油管 = select, Proxy, google, 🇸🇬IPLC
+Proxy = select, 🇺🇸gia8, 🇩🇪gia, 🇯🇵nex, 🇸🇬IPLC2
+油管 = select, Proxy, 🇸🇬IPLC2, 🇸🇬IPLC
 tw = select, Proxy, 🇨🇳CHT11
 game = select, DIRECT, Proxy
 Apple = select, DIRECT, Proxy
@@ -232,7 +232,7 @@ RULE-SET,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Rule
 
 
 # Telegram
-# RULE-SET,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/Telegram.list,Telegram
+# RULE-SET,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/Telegram.list,Proxy
 
 # Global 全球加速
 RULE-SET,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/Global.list,Proxy
