--- a/surge/lhie1.conf
+++ b/surge/lhie1.conf
@@ -18,13 +18,14 @@ network-framework = false
 🇺🇸BGP3 = ss, 175.102.11.145, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, obfs=http, obfs-host=world.taobao.com, udp-relay=true
 🇯🇵SB6 = ss, 103.101.223.7, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, obfs=http, obfs-host=world.taobao.com, udp-relay=true
 🇯🇵7 = ss, 175.102.11.185, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, obfs=http, obfs-host=world.taobao.com, udp-relay=true
-🇺🇸gia8 = ss, 103.102.7.28, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, obfs=http, obfs-host=world.taobao.com, udp-relay=true
+🇺🇸gia4 = ss, usgia4.0tk8a3a1q4t94dler.com, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, obfs=http, obfs-host=world.taobao.com, udp-relay=true
 🇩🇪gia = ss, 82.129.30.6, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, obfs=http, obfs-host=world.taobao.com, udp-relay=true
 🇸🇬IPLC2 =ss, 47.106.59.183, 152, encrypt-method=chacha20-ietf-poly1305, password=UrTAdN, obfs=tls, obfs-host=dba6929811.wns.windows.com, udp-relay=true
-
+🇺🇸1=ss, 139.196.122.193, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, obfs=http, obfs-host=world.taobao.com, fast-open=false, udp-relay=true
+🇺🇸2=ss, 47.101.5.110, 152, encrypt-method=chacha20-ietf-poly1305, password=UrTAdN, obfs=tls, obfs-host=dba6929811.wns.windows.com, fast-open=false, udp-relay=true
 🇯🇵nex = ss, vtyk.nbclouds.co ,1142, encrypt-method=chacha20, password=cf34c5e8c479, obfs=http, obfs-host=ODQ1ODQ2MDcgIAk6ZmE4NzhkZTQ4MGZkNGRiMg, udp-relay=true
 [Proxy Group]
-Proxy = select, 🇺🇸gia8, 🇩🇪gia, 🇯🇵nex, 🇸🇬IPLC2
+Proxy = select, 🇺🇸1, 🇩🇪gia, 🇯🇵nex, 🇸🇬IPLC2
 油管 = select, Proxy, 🇸🇬IPLC2, 🇸🇬IPLC
 tw = select, Proxy, 🇨🇳CHT11
 game = select, DIRECT, Proxy
