--- a/surge/lhie1.conf
+++ b/surge/lhie1.conf
@@ -32,6 +32,12 @@ game = select, DIRECT, Proxy
 Apple = select, DIRECT, Proxy
 
 [Rule]
+IP-CIDR,17.0.0.0/8,DIRECT
+# > Google
+DOMAIN-SUFFIX,googletraveladservices.com,DIRECT
+DOMAIN,dl.google.com,DIRECT
+DOMAIN,mtalk.google.com,DIRECT
+
 # Feeb
 DOMAIN-KEYWORD,epochtimes,REJECT
 DOMAIN-SUFFIX,881903.com,REJECT
