--- a/quan/Rewrite.conf
+++ b/quan/Rewrite.conf
@@ -1,4 +1,4 @@
-^https?:\/\/(www.)?(g|google)\.cn url 302 https://www.google.com.tw
+^https?:\/\/(www.)?(g|google)\.cn url 302 https://www.google.com.sg
 
 # > 知乎
 ^https?:\/\/www\.zhihu\.com\/api\/v4\/community-ad\/ url reject-img
