--- a/quan/Rewrite.conf
+++ b/quan/Rewrite.conf
@@ -1,5 +1,7 @@
 ^https?:\/\/(www.)?(g|google)\.cn url 302 https://www.google.com.sg
 
+^https?:\/\/(www.)?(g|google)\.com url 302 https://www.google.com.sg
+
 # > 知乎
 ^https?:\/\/www\.zhihu\.com\/api\/v4\/community-ad\/ url reject-img
 ^https?:\/\/api\.zhihu\.com\/(launch|real_time) url reject-img
